Improve readability of OID4VPAuthenticator
Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>